--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/brandonluismenesessolorzano/Library/Application Support/NetBeans/14/build.properties
+user.properties.file=C:\\Users\\Leo\\AppData\\Roaming\\NetBeans\\17\\build.properties
