--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,15 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\Leo\\Downloads\\jcalendar-1.4\\lib\\
 file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans-17\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=/Users/brandonluismenesessolorzano/Downloads/jcalendar-1/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-4=/Users/tong/Documents/jcalendar-1.4/lib/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.jcalendar-1.4.jar-3}
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.jcalendar-1.4.jar-4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
