--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans-17\\jcalendar-1.4
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=/Users/brandonluismenesessolorzano/Downloads/jcalendar-1/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-4=/Users/tong/Documents/jcalendar-1.4/lib/jcalendar-1.4.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\Leo\\Documents\\conexion sql server jar\\mssql-jdbc-12.2.0.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
-    ${file.reference.jcalendar-1.4.jar-4}
+    ${file.reference.jcalendar-1.4.jar-4}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
