--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.jcalendar-1.4.jar=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 user.properties.file=C:\\Users\\Leo\\AppData\\Roaming\\NetBeans\\17\\build.properties
