calendario, evito la seleccion de una fecha anterior a la fecha actual. sale aviso

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
 file.reference.jcalendar-1.4.jar=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.mssql-jdbc-12.2.0.jre8.jar=C:\\Users\\Leo\\Documents\\conexion sql server jar\\mssql-jdbc-12.2.0.jre8.jar
 user.properties.file=C:\\Users\\Leo\\AppData\\Roaming\\NetBeans\\17\\build.properties
