carpeta library añadida con 3 jar

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,8 @@
 compile.on.save=true
-file.reference.jcalendar-1.4.jar=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.mssql-jdbc-12.2.0.jre8.jar=C:\\Users\\Leo\\Documents\\conexion sql server jar\\mssql-jdbc-12.2.0.jre8.jar
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\Leo\\AppData\\Roaming\\NetBeans\\17\\build.properties
