--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Java-POO-UTP
+application.vendor=Leo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,24 +33,18 @@ dist.jar=${dist.dir}/Java-POO-UTP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Java-POO-UTP
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\Leo\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Program Files\\NetBeans-17\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=library\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-3=/Users/brandonluismenesessolorzano/Downloads/jcalendar-1/lib/jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-4=/Users/tong/Documents/jcalendar-1.4/lib/jcalendar-1.4.jar
-file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\Leo\\Documents\\conexion sql server jar\\mssql-jdbc-12.2.0.jre11.jar
-file.reference.mssql-jdbc-12.2.0.jre8.jar=/Users/brandonluismenesessolorzano/Downloads/sqljdbc_12.2/enu/mssql-jdbc-12.2.0.jre8.jar
+file.reference.mssql-jdbc-12.2.0.jre11.jar=library\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.RSProgressBar.jar=library\\RSProgressBar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.jcalendar-1.4.jar-3}:\
-    ${file.reference.jcalendar-1.4.jar-4}:\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre8.jar}
+    ${file.reference.RSProgressBar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
