--- a/Base de Datos/config.properties
+++ b/Base de Datos/config.properties
@@ -1,5 +1,6 @@
-# Configuracion de la base de datos, coloque sus credenciales de Azure SQL Database
-database.server=base-de.datos.windows.net
-database.name=TRAVEL_EASY
-database.username=Usuario_X
-database.password=Password_X
+# Configuracion de la base de datos
+database.stringConnection=jdbc:sqlserver://asd
+database.server=asd
+database.name=asd
+database.username=asd
+database.password=asd
