Se agregó el botón Imprimir Ticket y genera PDF en carpeta Boletas

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,6 +5,6 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Leo\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=/Users/brandonluismenesessolorzano/Library/Application Support/NetBeans/18/build.properties
 
 
