--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Java-POO-UTP
 endorsed.classpath=
 excludes=
+file.reference.iText-2.0.8.jar=library/iText-2.0.8.jar
 file.reference.jcalendar-1.4.jar=library\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=library\\mssql-jdbc-12.2.0.jre11.jar
@@ -47,7 +48,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
-    ${file.reference.RSProgressBar.jar}
+    ${file.reference.RSProgressBar.jar}:\
+    ${file.reference.iText-2.0.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
