--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,6 +5,6 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\USUARIO\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\Leo\\AppData\\Roaming\\NetBeans\\18\\build.properties
 
 
