Acutualizacion de errores

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Java-POO-UTP
 endorsed.classpath=
 excludes=
+file.reference.Descargas-jcalendar-1.4=E:\\Usuario\\Descargas\\jcalendar-1.4
 file.reference.iText-2.0.8.jar=library/iText-2.0.8.jar
 file.reference.jcalendar-1.4.jar=library\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Leo\\Documents\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar=library\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mysql-connector-java-8.0.30.jar=E:\\Usuario\\Descargas\\mysql-connector-java-8.0.30.jar
 file.reference.RSProgressBar.jar=library\\RSProgressBar.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -49,7 +51,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
     ${file.reference.RSProgressBar.jar}:\
-    ${file.reference.iText-2.0.8.jar}
+    ${file.reference.iText-2.0.8.jar}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}:\
+    ${file.reference.Descargas-jcalendar-1.4}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
